--- a/ChangeLog
+++ b/ChangeLog
@@ -48,7 +48,7 @@
 	* Removed BOOST_FOREACH usage.  This solves a compatability issue
 	with older versions of BOOST.
 
-2009-02-20  Tod Romo  <tromo@gorgoneion-w>
+2009-02-20    <tromo@gorgoneion-w>
 
 	* Added rotamer tool to calculate chi-1, chi-2 torsion angles over
 	time...
@@ -65,7 +65,7 @@
 	* Fixed potential issue with histogram size/bounds for rdf
 	tools... 
 
-2009-02-16  Tod Romo  <tromo@gorgoneion>
+2009-02-16    <tromo@gorgoneion>
 
 	* Fixed bug in aligner when centering the trajectory and when
 	using different alignment and transformation subsets...
@@ -145,7 +145,7 @@
 	clamped them to 0)
 	* Added the --terms command-line option back to svd
 
-2009-01-02  Tod Romo  <tromo@gorgoneion>
+2009-01-02    <tromo@gorgoneion>
 
 	* Fixed bug in build for MacOS X 10.5 (missing types)
 	* Fixed bug in aligner where the PDB that's written out was not
@@ -158,7 +158,7 @@
 	gcc-4.0.1.  This is to work around an issue with the
 	tr1::unordered_map implementation in gcc-4.0.1.
 
-2008-12-18  Tod Romo  <tromo@gorgoneion>
+2008-12-18    <tromo@gorgoneion>
 
 	* Fixed moderately severe bug when reading Amber trajectories by
 	using readFrame(i) rather than readFrame().
@@ -210,11 +210,11 @@
 	* Moved most of the internal classes/routines related to the
 	parsing system into the loos::internal namespace.
 
-2008-12-05  Tod Romo  <tromo@gorgoneion-w>
+2008-12-05    <tromo@gorgoneion-w>
 
 	* Moved Matrix classes into loos::Math namespace
 
-2008-12-05  Tod Romo  <tromo@gorgoneion.urmc-sh.rochester.edu>
+2008-12-05    <tromo@gorgoneion.urmc-sh.rochester.edu>
 
 	* Added a new matrix class
 	* Changed matrix IO to use the new templated function calls rather
@@ -274,7 +274,7 @@
 	to using the tr1 equivalent, or explicitly include the hash_set
 	header...
 
-2008-10-23  Tod Romo  <tromo@gorgoneion.urmc-sh.rochester.edu>
+2008-10-23    <tromo@gorgoneion.urmc-sh.rochester.edu>
 
 	* Added helix_kink tool
 	* Fixed problem with PDB output with 10,000 residues or more
