Change in how trajectories are handled...  The derived classes must now read in the first frame and cache it during construction.  The problem is that if they just call readFrame(0), then this will offset the readFrame() iterator, meaning:
traj = createTrajectory(...)
...
while (readFrame()) { ... }

will skip the first frame.  The derived classes must therefore set
cached_first AFTER having read the first frame.

Yes, this is an inelegant solution...there is no real enforcement that
derived classes have this behavior, but I have yet to think of
something better to do...

svn path=/software/LOOS/trunk/; revision=2099

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-06-18    <tromo@spade.biophysics.rochester.edu>
+
+	* Changed the specs for classes derived from the Trajectory
+	class.  All derived classes must now ensure that the first frame
+	of the trajectory is read in and cached as part of their
+	initialization.  In order to keep the readFrame() iterator from
+	skipping the first frame, the derived classes must also set the
+	cached_first flag.
+
 2009-05-15    <tromo@spade.biophysics.rochester.edu>
 
 	* Added support for Amber RST and INPCRD files as a single-frame
