Added AtomicGroup::findBonds() to do a distance-based bond search
svn path=/software/LOOS/trunk/; revision=2138

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-29    <tromo@spade.biophysics.rochester.edu>
+
+	* Added AtomicGroup::findBonds() to perform a distance-based
+	search... 
 
 2009-06-22    <tromo@spade.biophysics.rochester.edu>
 
