--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-07-01    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in AtomicGroup::findBonds().  Changed default distance
+	threshold to 1.25 \AA.
+	* Added support for reimaging in subsetter
+	* Added support for multiple verbosity levels in subsetter
+	* Changed PDB output to now prune the connectivity output if atoms
+	are missing...this means you do not nead to clearBonds() prior to
+	writing out a PDB.
+
 2009-06-29    <tromo@spade.biophysics.rochester.edu>
 
 	* Added AtomicGroup::findBonds() to perform a distance-based
