--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-08    <tromo@spade.biophysics.rochester.edu>
+
+	* Added some new bits to Atoms that can be set/queried by the
+	programmer...  flagbit, and usr1bit through usr3bit.
+
 2009-07-07    <tromo@spade.biophysics.rochester.edu>
 
 	* Added support for testing atom equality using the binary
